--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ networks:
   pixia-network:
     name: pixia-network
     driver: bridge
+    enable_ipv6: true
     ipam:
       config:
         - subnet: 172.30.0.0/16
+        - subnet: fd00:1234:5678::/48
