--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23.4'
+
+      - name: Build static gost binaries
+        run: ./go-gost/build.sh ./go-gost/dist
+
+      - name: Generate gost checksums
+        run: |
+          sha256sum go-gost/dist/gost-amd64 > go-gost/dist/gost-amd64.sha256
+          sha256sum go-gost/dist/gost-arm64 > go-gost/dist/gost-arm64.sha256
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -70,11 +83,15 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Publish docker-compose assets
+      - name: Publish release assets
         uses: softprops/action-gh-release@v2
         with:
           files: |
             docker-compose.yml
             docker-compose-v4.yml
             docker-compose-v6.yml
+            go-gost/dist/gost-amd64
+            go-gost/dist/gost-arm64
+            go-gost/dist/gost-amd64.sha256
+            go-gost/dist/gost-arm64.sha256
           overwrite_files: true
