--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: vite-frontend/package-lock.json
+          cache-dependency-path: vite-frontend/package.json
 
       - name: Install
         run: npm install --legacy-peer-deps
