--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "gomod"
     directory: "/"
+    target-branch: "dev"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -22,13 +23,10 @@ updates:
         applies-to: version-updates
         update-types:
           - "major"
-      go-security:
-        applies-to: security-updates
-        patterns:
-          - "*"
 
   - package-ecosystem: "npm"
     directory: "/vite-frontend"
+    target-branch: "dev"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -49,13 +47,10 @@ updates:
         applies-to: version-updates
         update-types:
           - "major"
-      npm-security:
-        applies-to: security-updates
-        patterns:
-          - "*"
 
   - package-ecosystem: "github-actions"
     directory: "/"
+    target-branch: "dev"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -76,7 +71,3 @@ updates:
         applies-to: version-updates
         update-types:
           - "major"
-      github-actions-security:
-        applies-to: security-updates
-        patterns:
-          - "*"
