--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "gomod"
     directory: "/"
+    target-branch: "main"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -12,14 +13,20 @@ updates:
       prefix: "deps(go)"
     labels:
       - "dependencies"
-    groups:
-      go-minor-patch:
+    ignore:
+      - dependency-name: "*"
         update-types:
-          - "minor"
-          - "patch"
+          - "version-update:semver-minor"
+          - "version-update:semver-patch"
+    groups:
+      go-major:
+        applies-to: version-updates
+        update-types:
+          - "major"
 
   - package-ecosystem: "npm"
     directory: "/vite-frontend"
+    target-branch: "main"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -30,14 +37,20 @@ updates:
       prefix: "deps(npm)"
     labels:
       - "dependencies"
-    groups:
-      npm-minor-patch:
+    ignore:
+      - dependency-name: "*"
         update-types:
-          - "minor"
-          - "patch"
+          - "version-update:semver-minor"
+          - "version-update:semver-patch"
+    groups:
+      npm-major:
+        applies-to: version-updates
+        update-types:
+          - "major"
 
   - package-ecosystem: "github-actions"
     directory: "/"
+    target-branch: "main"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -48,8 +61,13 @@ updates:
       prefix: "deps(ci)"
     labels:
       - "dependencies"
-    groups:
-      github-actions-minor-patch:
+    ignore:
+      - dependency-name: "*"
         update-types:
-          - "minor"
-          - "patch"
+          - "version-update:semver-minor"
+          - "version-update:semver-patch"
+    groups:
+      github-actions-major:
+        applies-to: version-updates
+        update-types:
+          - "major"
